# TrickyStore

./: .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
module/: .gitignore  build.gradle.kts
module/src/main/cpp/: CMakeLists.txt  binder_interceptor.cpp  example.cpp
module/src/main/cpp/binder/: stub_binder.cpp  stub_utils.cpp
module/src/main/cpp/binder/include/binder/: Binder.h  BpBinder.h  Common.h  IBinder.h  IInterface.h  IPCThreadState.h  IServiceManager.h  Parcel.h  unique_fd.h
module/src/main/cpp/binder/include/kernel/: binder.h
module/src/main/cpp/binder/include/utils/: Errors.h  RefBase.h  String16.h  StrongPointer.h  Vector.h
module/src/main/cpp/elf_util/: elf_util.cpp
module/src/main/cpp/elf_util/include/: elf_util.h
module/src/main/cpp/hook_util/: hook_helper.hpp  type_traits.hpp
module/src/main/cpp/inject/: main.cpp  utils.cpp  utils.hpp
module/src/main/cpp/logging/: logging.cpp
module/src/main/cpp/logging/include/: logging.hpp
module/src/main/cpp/lspmparser/: lsplt.cpp
module/src/main/cpp/lspmparser/include/: lsplt.hpp
module/src/main/cpp/zygisk/: main.cpp  zygisk.hpp
module/template/: customize.sh  daemon  module.prop  post-fs-data.sh  sepolicy.rule  service.sh  target.txt
module/template/webroot/: index.html  main.js  util.js
module/template/webroot/shell/: init.sh
service/: build.gradle.kts  proguard-rules.pro
service/src/main/java/io/github/a13e300/tricky_store/: Config.kt  KeystoreInterceptor.kt  Logger.java  Main.kt  SecurityLevelInterceptor.kt  util.kt
service/src/main/java/io/github/a13e300/tricky_store/binder/: BinderInterceptor.kt
service/src/main/java/io/github/a13e300/tricky_store/fwpatch/: Android.java  Keybox.java  Utils.java  XMLParser.java
service/src/main/java/io/github/a13e300/tricky_store/keystore/: CertHack.java  Utils.java  XMLParser.java
stub/: build.gradle.kts
stub/src/main/java/android/content/pm/: IPackageManager.java
stub/src/main/java/android/hardware/security/keymint/: Algorithm.java  EcCurve.java  KeyParameter.java  KeyParameterValue.java  KeyPurpose.java  SecurityLevel.java  Tag.java
stub/src/main/java/android/os/: ServiceManager.java  SystemProperties.java
stub/src/main/java/android/system/keystore2/: Authorization.java  IKeystoreSecurityLevel.java  IKeystoreService.java  KeyDescriptor.java  KeyEntryResponse.java  KeyMetadata.java
